syntax = "proto3";
option java_package = "no.nav.dagpenger.inntekt.rpc";
option java_multiple_files = true;

import "InntektV1.proto";

service InntektHenter {
    rpc hentInntekt(InntektId) returns (InntektV1) {}
}